<resources>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">9ONzVfqhJ8XvsDSthjVg6cf86Gg1I1HD4RIue3VB</string>
    <string name="back4app_client_key">p2BAbdfVguKiXUkZYIMwNOmc6dww1aRlAIKBuX1C</string>

    <string name="app_name">Ezata</string>
    <string name="str_newOrder">New Order</string>
    <string name="str_newOrders">New Orders</string>
    <string name="str_InProgress">In Progress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_OrderNumber">J83NW</string>
    <string name="str_CustomerName">Customer Name</string>
    <string name="str_Time">32 Mins</string>
    <string name="items">6 Items by 12:36 PM</string>
    <string name="str_NewOrder">New Order</string>
    <string name="str_ORDER">ORDER</string>
    <string name="str_ItemCount">6 Items</string>
    <string name="str_PickUpAt">PICK UP AT</string>
    <string name="str_time">11:38 PM</string>
    <string name="str_QTY">QTY</string>
    <string name="str_Item">ITEM</string>
    <string name="str_Price">PRICE</string>
    <string name="str_SunTotal">Subtotal</string>
    <string name="str_Tax">Tax (15%)</string>
    <string name="str_Total">Total</string>
    <string name="str_CancelOrder">Cancel Order</string>
    <string name="str_AcceptOrder">Accept Order</string>
    <string name="str_AdjustOrder">Adjust Order</string>
    <string name="str_Readyforpickup">Ready For Pick Up</string>
    <string name="str_Ready_For_PickUp">READY FOR PICK UP</string>
    <string name="str_Sort">Sort</string>
    <string name="str_Courier">Courier</string>
    <string name="str_CourierName">David T.</string>
    <string name="str_AwaitingPickup">Awaiting Pickup</string>
    <string name="str_Pin">PIN</string>
    <string name="str_PinCode">****</string>
    <string name="str_OnRoute">ON ROUTE</string>
    <string name="str_delieveredIn">delivered in</string>
    <string name="str_History">HISTORY</string>
    <string name="Date">Date</string>
    <string name="Order">Order #</string>
    <string name="Customer">Customer</string>
    <string name="Type">Type</string>
    <string name="Amount">Amount</string>
    <string name="Status">Status</string>
    <string name="menu">MENU</string>
    <string name="ItemAvailbility">ITEM AVAILABILITY</string>
    <string name="contact">CONTACT SUPPORT</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="Settings">SETTINGS</string>
    <string name="Account">ACCOUNT</string>
    <string name="str_CustomerAlexT">Customer :</string>
    <string name="str_CustomerFeedback">Customer Feedback</string>
    <string name="str_Delieveredat">Delivered on:</string>
    <string name="str_IncorrectTemp">Incorrect Temperature</string>
    <string name="str_verytasty">Very Tasty</string>
    <string name="str_tvPackagedWell">Packaged Well</string>
    <string name="str_Active">Active</string>
    <string name="str_AcceptingOrders">Accepting Orders</string>
    <string name="str_Pause">Pause</string>
    <string name="str_PauseOrders">Pause Orders for a brief time</string>
    <string name="str_Inactive">Inactive</string>
    <string name="str_NotAcceptingOrder">Not accepting rders</string>
    <string name="in_route">In Route</string>
    <string name="str_pick_up_location">PICK UP Location</string>
    <string name="str_dropOff_location">Drop off Location</string>
    <string name="str_name">Name</string>
    <string name="str_Jhon">Jhon Smith</string>
    <string name="str_914">91 404 4677</string>
    <string name="str_address">Address</string>
    <string name="str_franklin">4536 Franklin Avenue,Palm Coast,Florida</string>
    <string name="str_phoneNumber">Phone Number</string>
    <string name="str_vehicle_type">Vehicle Type</string>
    <string name="str_item_size">Item Size</string>
    <string name="str_small">Small</string>
    <string name="str_large">Large</string>
    <string name="str_medium">Medium</string>
    <string name="str_soon_possible">As Soon As Possible</string>
    <string name="str_30Mins">30 min</string>
    <string name="str_submit">Submit</string>
    <string name="str_driveryTime">Delivery Time</string>
    <string name="str_pickupLocation">Pickup Location</string>
    <string name="str_eztaGo">EZATA GO</string>
    <string name="str_validation">Please input all fields</string>
    <string name="str_orderCreated">Order Created</string>
</resources>