<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvClosePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="?attr/selectableItemBackground"
        android:text="Close Popup"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_down_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/tt_commons_medium"
        android:text="10s"
        android:textColor="@color/black"
        android:textSize="@dimen/_60sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClosePopup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ready_for_pickup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/neworder_item_shape"
        android:backgroundTint="#0b9532"
        android:fontFamily="@font/inter_regular"
        android:padding="@dimen/_5sdp"
        android:text="@string/str_Readyforpickup"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/in_route_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/count_down_text"
        app:layout_constraintVertical_bias="0" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/in_route_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/neworder_item_shape"
        android:backgroundTint="#0B8995"
        android:fontFamily="@font/inter_regular"
        android:padding="@dimen/_5sdp"
        android:text="@string/in_route"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ready_for_pickup_button"
        app:layout_constraintTop_toBottomOf="@id/count_down_text"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@drawable/neworder_item_shape"
        android:backgroundTint="#545454"
        android:fontFamily="@font/inter_regular"
        android:padding="@dimen/_5sdp"
        android:text="@string/str_CancelOrder"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ready_for_pickup_button"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".5" />


</androidx.constraintlayout.widget.ConstraintLayout>